--- a/algamoney-api/src/main/resources/messages.properties
+++ b/algamoney-api/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 mensagem.invalida=Formato de mensagem inv\u00E1lido
+recurso.nao-econtrado=Recurso n\u00E3o encontrado
 
 categoria.nome=Nome
 pessoa.nome=Nome
